# music-sync

./: .gitignore  AGENTS.md  README.md  TODO.md  config.yml.example  genre_fallback.csv  other_artists_for_llm.txt  other_artists_new.csv  pyproject.toml  readme.md  requirements.txt  songs not found.txt
src/music_sync/: __main__.py  auth.py  cache.py  cache_db.py  matcher.py  sync.py  sync_engine.py
src/spotify_to_tidal/: __main__.py  sync.py
tests/unit/: test_auth.py  test_cache.py
