[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-sync"
version = "1.0.7"
requires-python = ">= 3.10"

dependencies = [
  "spotipy~=2.24",
  "tidalapi~=0.8.10",
  "pyyaml~=6.0",
  "tqdm~=4.64",
  "sqlalchemy~=2.0",
  "pytest~=8.0",
  "pytest-mock~=3.8"
]

[tools.setuptools.packages."music_sync"]
where = "src"
include = "music_sync*"

[project.scripts]
music-sync = "music_sync.__main__:main"